--- a/javascript/canvasexample/public/index.html
+++ b/javascript/canvasexample/public/index.html
@@ -7,5 +7,6 @@
 	<canvas id="mycanvas" width=500 height=500 style="background-color:green"></canvas>
 	<br/>
 	<button id="startbutton" onclick="startCanvas()">Start</button>
+	<button id="startcircles" onclick="startCircles()">Circles</button>
 </body>
 </html>
